Project Content Added

--- a/src/App.scss
+++ b/src/App.scss
@@ -117,11 +117,179 @@ header {
         transform: translateX(-50%);
     }
 }
+
+.header-logo-container {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    width: 15%;
+    bottom: 0;
+    right: 1em;
+    font-size: .7em;
+
+    a {
+        color: $accent2;
+    }
+
+    .logo-img {
+        width: 20%;
+    }
+}
 /* #endregion */
 
 /* #region MAIN */
+.project-open, .issue-details, .project-close {
+    padding: 28px 0 36px;
+}
+
+/* #region ABOUT*/
+
+.spec-detail {
+    padding-left: .5em;
+}
+
+.project-palette {
+    width: 50%;
+}
+/* #endregion */
+
+/* #region ISSUE DETAILS */
+.compare {
+    min-width: 150px;
+    min-height: 150px;
+    background-size: cover;   
+}
+
+
+/* #region Cybervision */
+.cybervision-live1, .cybervision-org1 {
+    background-position: top;
+}
+.cybervision-org1 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4m6LNYCDTn0tt1vHSr9lCrF8oB_WlovaAWyg8T3lY-R8MN0SKNRE8Z4CaKw306ZzMkdydvO39cWoprCuMY25uVXkuB4l7qAO9bQZPhSvB3AoB9XbCXlvAXDViB3ggQzVBVWhqnMojE2XY3owkB_h9hAzcIEM2GwhzjEkK9DDyvLxjKU2U9XwX9Mw0Ht7F7u_zh?width=393&height=660&cropmode=none');
+}
+
+.cybervision-live1 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4m8HkNDSboHBDyHPy1KQpch_JVvL14eUGurk6SB2X27ItVMREE_4OWD7JsMhmYHd-Bk_gy4vhsuD_WjMHhsKPDmtbybYCxXF2xShKhN-n1ibNX0dYTu0lGk1fTlI8quSEvVoXziagJUH0RT74jpV6nSDl76LeMZbWpl7JhvJIgZ69WZTOMJvaMo8lDdNQa5r_u?width=660&height=621&cropmode=none');
+}
+
+.cybervision-org2, .cybervision-live2 {
+    background-position: center;
+}
+
+.cybervision-org2 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4m6LNYCDTn0tt1vHSr9lCrF8oB_WlovaAWyg8T3lY-R8MN0SKNRE8Z4CaKw306ZzMkdydvO39cWoprCuMY25uVXkuB4l7qAO9bQZPhSvB3AoB9XbCXlvAXDViB3ggQzVBVWhqnMojE2XY3owkB_h9hAzcIEM2GwhzjEkK9DDyvLxjKU2U9XwX9Mw0Ht7F7u_zh?width=393&height=660&cropmode=none');
+}
+
+.cybervision-live2 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4m8HkNDSboHBDyHPy1KQpch_JVvL14eUGurk6SB2X27ItVMREE_4OWD7JsMhmYHd-Bk_gy4vhsuD_WjMHhsKPDmtbybYCxXF2xShKhN-n1ibNX0dYTu0lGk1fTlI8quSEvVoXziagJUH0RT74jpV6nSDl76LeMZbWpl7JhvJIgZ69WZTOMJvaMo8lDdNQa5r_u?width=660&height=621&cropmode=none');
+}
+
+.cybervision-live3, .cybervision-org3 {
+    background-position: bottom;
+}
+
+.cybervision-org3 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4m6LNYCDTn0tt1vHSr9lCrF8oB_WlovaAWyg8T3lY-R8MN0SKNRE8Z4CaKw306ZzMkdydvO39cWoprCuMY25uVXkuB4l7qAO9bQZPhSvB3AoB9XbCXlvAXDViB3ggQzVBVWhqnMojE2XY3owkB_h9hAzcIEM2GwhzjEkK9DDyvLxjKU2U9XwX9Mw0Ht7F7u_zh?width=393&height=660&cropmode=none');
+}
+
+.cybervision-live3 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4m8HkNDSboHBDyHPy1KQpch_JVvL14eUGurk6SB2X27ItVMREE_4OWD7JsMhmYHd-Bk_gy4vhsuD_WjMHhsKPDmtbybYCxXF2xShKhN-n1ibNX0dYTu0lGk1fTlI8quSEvVoXziagJUH0RT74jpV6nSDl76LeMZbWpl7JhvJIgZ69WZTOMJvaMo8lDdNQa5r_u?width=660&height=621&cropmode=none');
+}
 
 /* #endregion */
+
+
+/* #region Retrain Back Pain */
+.retrainbackpain-live1, .retrainbackpain-org1 {
+    background-position: top;
+}
+
+.retrainbackpain-org1 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4murRa-Mm4RNU8gSfxB4u9mhCO8vPfONBomWvocmhehdawJyIQrJ1q6D353XIjHC7ynm0d1L7CDT5qvQU8G5jLImftKQBDejSRPT7NwwbQSqgyCKzpuadA8kQIS0hu4LwYeNbsI4MqOLDyecWUrhL8XMQl4czo9y4Ppbz88VUUDQNcyncBOxglj9FO2xdnK55h?width=660&height=411&cropmode=none');
+}
+
+.retrainbackpain-live1 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4mCHOOFQrjcpSJrEc8-lZ95DWmLwLDzbYs4ty6BX3bxSD_5eVpmFUdg2Z6SfSPD8VPNi4_Psl9rFBE5v9V8FB3KH_QnVRaXtk71ZWMu46_ON078LaalA_t929zfBtT1VM_3u0vwXY8dIK0UUwCludTomnoZblUTvii2gJJTm94LYRkOEhcK3Gu4Yl9EQQCUO6H?width=660&height=411&cropmode=none');
+}
+
+.retrainbackpain-live2, .retrainbackpain-org2 {
+    background-position: center;
+}
+
+.retrainbackpain-org2 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4murRa-Mm4RNU8gSfxB4u9mhCO8vPfONBomWvocmhehdawJyIQrJ1q6D353XIjHC7ynm0d1L7CDT5qvQU8G5jLImftKQBDejSRPT7NwwbQSqgyCKzpuadA8kQIS0hu4LwYeNbsI4MqOLDyecWUrhL8XMQl4czo9y4Ppbz88VUUDQNcyncBOxglj9FO2xdnK55h?width=660&height=411&cropmode=none');
+}
+
+.retrainbackpain-live2 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4mCHOOFQrjcpSJrEc8-lZ95DWmLwLDzbYs4ty6BX3bxSD_5eVpmFUdg2Z6SfSPD8VPNi4_Psl9rFBE5v9V8FB3KH_QnVRaXtk71ZWMu46_ON078LaalA_t929zfBtT1VM_3u0vwXY8dIK0UUwCludTomnoZblUTvii2gJJTm94LYRkOEhcK3Gu4Yl9EQQCUO6H?width=660&height=411&cropmode=none');
+}
+
+
+.retrainbackpain-live3, .retrainbackpain-org3 {
+    background-position: bottom;
+}
+
+.retrainbackpain-org3 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4murRa-Mm4RNU8gSfxB4u9mhCO8vPfONBomWvocmhehdawJyIQrJ1q6D353XIjHC7ynm0d1L7CDT5qvQU8G5jLImftKQBDejSRPT7NwwbQSqgyCKzpuadA8kQIS0hu4LwYeNbsI4MqOLDyecWUrhL8XMQl4czo9y4Ppbz88VUUDQNcyncBOxglj9FO2xdnK55h?width=660&height=411&cropmode=none');
+}
+
+
+.retrainbackpain-live3 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4mCHOOFQrjcpSJrEc8-lZ95DWmLwLDzbYs4ty6BX3bxSD_5eVpmFUdg2Z6SfSPD8VPNi4_Psl9rFBE5v9V8FB3KH_QnVRaXtk71ZWMu46_ON078LaalA_t929zfBtT1VM_3u0vwXY8dIK0UUwCludTomnoZblUTvii2gJJTm94LYRkOEhcK3Gu4Yl9EQQCUO6H?width=660&height=411&cropmode=none');
+}
+
+/* #endregion */
+
+
+/* #region Perry Associates */
+.perryassociates-live1, .perryassociates-org1 {
+    background-position: top;
+}
+
+.perryassociates-org1 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4mHhLK5yvkOeP2tZN-pDHKDdkcf0QV0Xui1z1BPNviHJEUONrodwbt84zEAgecwVWZfrxoyGbQKGy_My-uqle7rOy1t_IaN8T39sMoioIXCZ5xIb7EkwGcjl2NEyhkpv1RlCAIfHMck2_Z_A-eyh3Pq9Z4JPUfdARWuJ_ViCc_ec4oW7HHi1Hvbp24s51boax_?width=379&height=660&cropmode=none');
+}
+
+.perryassociates-live1 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4mc6Dd3bd1zZpx1lHGWC-SwEWaZMmp2Z-0SpuR88eai-ZSLAjRN-t8iMZZDqa3STjcG5x-_DNKMTnH4PK64xqCVpXOOH7LZbwmvU6agw84z8Js5NAplyYemLQ1L6-kGtNS5NT8zbtnIHrYFOgMRkcKm97_1jnHTk4_eO658moN6stpwA97B9olw67iDcz4sapL?width=350&height=660&cropmode=none');
+}
+
+.perryassociates-live2, .perryassociates-org2 {
+    background-position: center;
+}
+
+.perryassociates-org2 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4mHhLK5yvkOeP2tZN-pDHKDdkcf0QV0Xui1z1BPNviHJEUONrodwbt84zEAgecwVWZfrxoyGbQKGy_My-uqle7rOy1t_IaN8T39sMoioIXCZ5xIb7EkwGcjl2NEyhkpv1RlCAIfHMck2_Z_A-eyh3Pq9Z4JPUfdARWuJ_ViCc_ec4oW7HHi1Hvbp24s51boax_?width=379&height=660&cropmode=none');
+}
+
+.perryassociates-live2 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4mc6Dd3bd1zZpx1lHGWC-SwEWaZMmp2Z-0SpuR88eai-ZSLAjRN-t8iMZZDqa3STjcG5x-_DNKMTnH4PK64xqCVpXOOH7LZbwmvU6agw84z8Js5NAplyYemLQ1L6-kGtNS5NT8zbtnIHrYFOgMRkcKm97_1jnHTk4_eO658moN6stpwA97B9olw67iDcz4sapL?width=350&height=660&cropmode=none');
+}
+
+.perryassociates-live3, .perryassociates-org3 {
+    background-position: bottom;
+}
+
+.perryassociates-org3 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4mHhLK5yvkOeP2tZN-pDHKDdkcf0QV0Xui1z1BPNviHJEUONrodwbt84zEAgecwVWZfrxoyGbQKGy_My-uqle7rOy1t_IaN8T39sMoioIXCZ5xIb7EkwGcjl2NEyhkpv1RlCAIfHMck2_Z_A-eyh3Pq9Z4JPUfdARWuJ_ViCc_ec4oW7HHi1Hvbp24s51boax_?width=379&height=660&cropmode=none');
+}
+
+.perryassociates-live3 {
+    background-image: url('https://snz04pap002files.storage.live.com/y4mc6Dd3bd1zZpx1lHGWC-SwEWaZMmp2Z-0SpuR88eai-ZSLAjRN-t8iMZZDqa3STjcG5x-_DNKMTnH4PK64xqCVpXOOH7LZbwmvU6agw84z8Js5NAplyYemLQ1L6-kGtNS5NT8zbtnIHrYFOgMRkcKm97_1jnHTk4_eO658moN6stpwA97B9olw67iDcz4sapL?width=350&height=660&cropmode=none');
+}
+/* #endregion */
+
+
+/* #endregion */
+
+
+/*#region CLOSE */
+
+/* #endregion */
+
+/* #endregion */
+
 
 /* #region SOCIAL ICONS */
 
