--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,6 @@ html {
 body {
   font-family: "Roboto", sans-serif;
   color: #333333;
-  background-color: #e8e8e8;
   letter-spacing: 1px;
   line-height: 1.5em;
 }
@@ -76,6 +75,12 @@ a:hover {
   cursor: not-allowed;
 }
 
+.project-app-container {
+  background-color: #e8e8e8;
+  padding-left: 0;
+  padding-right: 0;
+}
+
 /*#endregion*/
 /* #region HEADER */
 header {
@@ -104,18 +109,24 @@ header .header-content {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 15%;
+  width: 125px;
   bottom: 0;
   right: 1em;
   font-size: .7em;
 }
 
 .header-logo-container a {
+  text-decoration: none;
+  font-weight: 600;
   color: #f5deb3;
 }
 
 .header-logo-container .logo-img {
-  width: 20%;
+  width: 25px;
+  height: 25px;
+  background-color: #f5deb3;
+  padding: 1px;
+  border-radius: 50%;
 }
 
 /* #endregion */
@@ -125,8 +136,18 @@ header .header-content {
 }
 
 /* #region ABOUT*/
+.project-img-container {
+  text-align: center;
+}
+
 .project-img {
-  width: 100%;
+  width: 70%;
+  background-color: #ffffff;
+  border: 2px solid #8b4513;
+}
+
+.project-caption {
+  margin-top: 8px;
 }
 
 .spec-container {
@@ -142,6 +163,10 @@ header .header-content {
   margin-bottom: 0;
 }
 
+.spec-detail .spec-detail-sublist {
+  padding-left: .8em;
+}
+
 .project-palette {
   width: 65%;
 }
@@ -150,6 +175,8 @@ header .header-content {
 /* #region ISSUE DETAILS */
 .issue-details {
   background-color: #ffffff;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .issue-details .card {
@@ -164,6 +191,12 @@ header .header-content {
 .issue-content {
   padding-left: 1em;
   padding-right: 3em;
+}
+
+.issue-imgs {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .issue-img {
