--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ img {
 .btn {
   padding: 8px;
   font-weight: 700;
-  text-transform: uppercase;
+  font-variant: small-caps;
   letter-spacing: .035em;
 }
 
@@ -130,9 +130,29 @@ header .header-content {
 }
 
 /* #endregion */
+.project-nav {
+  background-color: #e6e6e6;
+  margin-left: 6px;
+  margin-right: 28px;
+}
+
+.project-nav h5 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-variant: small-caps;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-right: 60px;
+}
+
 /* #region MAIN */
-.project-open, .issue-details, .project-close {
+.project-open, .issue-details {
   padding: 28px 0 36px;
+}
+
+.project-description {
+  padding: 36px 36px 36px 68px;
 }
 
 /* #region ABOUT*/
@@ -148,6 +168,14 @@ header .header-content {
 
 .project-caption {
   margin-top: 8px;
+}
+
+.project-open-specs {
+  padding: 0 28px 28px;
+}
+
+.open-specs, .project-role {
+  padding: 0 36px;
 }
 
 .spec-container {
@@ -189,7 +217,7 @@ header .header-content {
 }
 
 .issue-content {
-  padding-left: 1em;
+  padding-left: 3em;
   padding-right: 3em;
 }
 
@@ -305,9 +333,31 @@ header .header-content {
 /* #endregion */
 /* #endregion */
 /*#region CLOSE */
-.more-info p {
+.project-close {
+  padding: 8px 0 28px;
+}
+
+.project-close h2 {
+  padding-left: 24px;
+}
+
+.more-info p, .project-tools p {
   font-size: 12px;
   padding: 0 1.5em;
+}
+
+.more-info, .project-tools, .contact-section {
+  padding-left: 28px;
+  padding-right: 28px;
+}
+
+.project-tools {
+  border-left: 1px solid #b8b8b8;
+  border-right: 1px solid #b8b8b8;
+}
+
+.contact-info-list {
+  list-style-type: none;
 }
 
 /* #endregion */
@@ -351,9 +401,13 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -374,7 +428,7 @@ footer a:hover {
 }
 
 footer .logo-container {
-  width: 15%;
+  width: auto;
   font-size: .7em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -387,11 +441,54 @@ footer .logo-container a {
 
 footer .logo-container .logo-img {
   width: 20%;
+  background-color: #f5deb3;
+  padding: 3px;
+  border-radius: 50%;
+  margin-right: 5px;
 }
 
 footer .social-links-container {
   width: auto;
   text-align: center;
+  margin: 1em 0;
+}
+
+footer .aew-social-link i.fab {
+  padding: 6px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+  color: #f2f2f2;
+  font-size: 16px;
+}
+
+footer .aew-social-link .fa-linkedin-in {
+  background-color: #0077B5;
+}
+
+footer .aew-social-link .fa-twitter {
+  background-color: #1da1f2;
+}
+
+footer .aew-social-link .fa-slideshare {
+  background-color: #0077B5;
+}
+
+footer .aew-social-link .fa-free-code-camp {
+  background-color: darkgreen;
+}
+
+footer .aew-social-link .fa-youtube {
+  background-color: #CD201F;
+}
+
+footer .aew-social-link .fa-github {
+  background-color: #24292e;
+}
+
+footer .aew-social-link .fa-behance-square {
+  background-color: #0057FF;
 }
 
 footer .footer-text {
@@ -402,6 +499,27 @@ footer .footer-text {
 }
 
 /* #endregion */
+@media screen and (min-width: 768px) {
+  .project-nav h5 {
+    margin-right: 12px;
+  }
+  .project-description {
+    padding: 12px;
+  }
+  footer {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  footer .social-links-container {
+    margin: 0;
+  }
+}
+
 @media print {
   .print, #aedubyah-print-footer.print {
     display: block;
